# http2-client

./: Makefile  README.md  pyproject.toml
src/h2cli/: cli.py  connection.py  frame.py  frame_settings.py
tests/: test_frame.py
